force-app/main/default/objects/Department__c/Department__c.object-meta.xml
<CustomObject>
    <description>Students associated to one or more departments</description>
    <label>Department</label>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>