force-app/main/default/objects/Department__c/fields/EnrollmentFee__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentFee__c</fullName>
    <inlineHelpText>Enrollment Fee for the department</inlineHelpText>
    <label>Enrollment Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>