force-app/main/default/objects/Department__c/fields/HeadofDepartment__c.field-meta.xml
<CustomField>
    <fullName>HeadofDepartment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Department</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>