force-app/main/default/objects/Department__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HeadofDepartment__c</columns>
    <columns>Description__c</columns>
    <columns>EnrollmentFee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>